--- a/index.html
+++ b/index.html
@@ -175,58 +175,26 @@ Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, porro, velit con
       </p>
       <a class="covid" href="#">Learn more ></a>
     </div>
+  </div>
 
-    <section class="btmcardsec">
-      <h3>For business</h3>
-      <div class="row">
-        <div class="col-lg-3 col-md-3 col-12">
-          <div class="card">
-            <img class="card-img-top" src="images/card5.png" alt="Card image" style="width: 100%" />
-            <div class="card-body">
-              <h4 class="card-title">Watches!</h4>
-              <p class="card-text">
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus ex eligendi, necessitatibus voluptas, dolore nesciunt illum vel blanditiis inventore rem voluptatum, ipsa veniam officia perspiciatis quis praesentium eum. Perspiciatis, quaerat?              </p>
-              <a href="#" class="">Shop now ></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-3 col-12">
-          <div class="card">
-            <img class="card-img-top" src="images/card6.png" alt="Card image" style="width: 100%" />
-            <div class="card-body">
-              <h4 class="card-title">Watches!</h4>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, est ipsa. Ipsa, pariatur? Mollitia, dolor non necessitatibus explicabo commodi est adipisci aliquid recusandae aliquam quam sunt dolores nulla, ullam magni!
-              </p>
-              <a href="#" class="">Learn more ></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-3 col-12">
-          <div class="card">
-            <img class="card-img-top" src="images/card7.png" alt="Card image" style="width: 100%" />
-            <div class="card-body">
-              <h4 class="card-title">Watches!</h4>
-              <p class="card-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae provident dolorem autem, expedita est magnam officiis, quisquam delectus fugiat veniam assumenda praesentium sequi nostrum possimus et voluptatem, culpa architecto neque?</p>
-              <a href="#" class="">Learn more ></a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-3 col-md-3 col-12">
-          <div class="card">
-            <img class="card-img-top" src="images/card8.png" alt="Card image" style="width: 100%" />
-            <div class="card-body">
-              <h4 class="card-title">Watches!</h4>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt dolorum, maiores voluptates architecto vitae voluptatum eveniet saepe earum, eligendi, voluptatem facere est ullam! Dolores vitae ipsum atque quasi fuga debitis.
-              </p>
-              <a href="#" class="">Register day ></a>
-            </div>
-          </div>
-        </div>
+    <div class="container-fluid services2">
+      <div class="service text-center text-light bg-primary">
+        <i class="fas fa-bath"></i>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi sapiente dolores eaque eveniet corporis exercitationem eius a odio velit voluptatum. Quae voluptatem hic blanditiis, delectus accusantium animi rem temporibus vitae.</p>
       </div>
-    </section>
 
+      <div class="service text-center text-light bg-primary">
+        <i class="fas fa-fire"></i>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis possimus vitae blanditiis iusto quidem expedita ex hic cumque mollitia, aliquam doloribus, autem quia maxime. Officiis modi deserunt odio optio praesentium.</p>
+      </div>
+
+      <div class="service text-center text-light bg-primary">
+        <i class="fas fa-water"></i>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi magni error quaerat aspernatur, quasi quod natus unde. Modi debitis delectus odit, pariatur autem assumenda aliquid molestiae nulla vero architecto adipisci!</p>
+      </div>
+    </div>
+
+    <div class="bodystyle">
     <div class="container">
       <div class="row services">
         <div class="col-lg-2 col-md-2">
