--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <h4 class="card-title">Watches!</h4>
                 <p class="card-text">
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, porro, velit consequuntur repudiandae obcaecati nobis voluptatem beatae, commodi praesentium maiores quam est distinctio eligendi nam esse deserunt dolorum totam ad.                </p>
-                <a href="#" class="">Find your next PC ></a>
+                <a href="#" class="">Shop now ></a>
               </div>
             </div>
           </div>
